2004-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* listbox.tcl: add FocusIn redirector to %W.c, add explicit
	-takefocus 0 to the frame parent.

	* widget.tcl (Widget::focusPrev): hack to avoid focus into direct
	parent when it is a megawidget. [Bug 765667]

	* notebook.tcl (NoteBook::_draw_page): adjust height for bottom
	drawn tabs. [Bug 988628]

2004-09-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* panelframe.tcl (new): new PanelFrame widget which creates a
	* pkgIndex.tcl:         frame with boxed title area that accepts
	* Makefile.in:          additional widgets.
	* BWman/contents.html: 
	* BWman/navtree.html:
	* BWman/PanelFrame.html (new): 

	* statusbar.tcl: improve init to use bwidget's automated arg
	passing for subwidgets.  Simplify delete subcommand to call remove.

	* xpm2image.tcl (xpm-to-image): correctly recognize None with
	-nocase

2004-09-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* buttonbox.tcl, combobox.tcl: code safety fixes

	* dialog.tcl: default button width to -11 on Win8.4, 8 otherwise

	* color.tcl, font.tcl, messagedlg.tcl:
	* passwddlg.tcl, progressdlg.tcl: change dialogs to anchor buttons e

	* statusbar.tcl: better -bg handling (configure too), and tighten
	up spacing on resize control to place it flush bottom right

2004-09-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: add -showseparator optional horizontal separator.

2004-08-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: correct name of image for use on unix.
	Try to use of PNG image at each create (it just looks better).

2004-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (Tree::delete): call -selectcommand if we delete
	something that was selected.

2004-08-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: correct use of PNG vs. GIF image.
	Don't abort creation of statusbar when gridded - just don't try
	to resize.
	Correct example to use label -width 1

2004-08-20  Jeff Hobbs  <jeffh@ActiveState.com>
